--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "gcp-build": "tsc -p ."
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
