--- a/package.json
+++ b/package.json
@@ -19,16 +19,11 @@
     "react-color": "^2.18.1",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
     "styled-components": "^5.0.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "dev": "next dev",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev"
   },
   "eslintConfig": {
     "extends": "react-app"
