--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.0",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.0",
+    "react-ga": "^2.7.0",
     "react-router-dom": "^5.1.2",
     "styled-components": "^5.0.1",
     "typescript": "~3.7.2"
