Include scripts next

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": "react-app"
